# soul

./: .gitignore  Cargo.toml  woman  woman.fish
src/: lib.rs
src/anima/: mod.rs  unit.rs
src/anima/soul/: mod.rs
src/soul/: mod.rs
src/soul/edge/: mod.rs
src/soul/graph/: mod.rs
src/soul/node/: mod.rs
